2020-09-02 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Fix conversion to some variables with units (e.g. c)

2020-08-31 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Increase default precision in qalc to 10

2020-08-21 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Transform vector to matrix with one column (column vector) for matrix arguments

2020-08-15 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Treat vector as column vector for matrix multiplication (when 1st factor is a matrix and 2nd factor is a vector)

2020-08-11 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Show information about wrong number of arguments for explicit commands (using /)
	* Fix help text for info command
	* Fix variable command when illegal name cannot be converted to valid name

2020-08-10 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Add support for ohm unicode symbol and inverted ohm (for siemens)
	* Add biot (Bi) name for abampere
	* Add abhenry (abH) unit
	* Fix display of unit with negative exponent and factor 1 (do not display as division)
	* Display multiplication of non-abbreviated and abbreviated similarily

2020-08-08 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Fix conversion to ratio
	* Replace J/T with A*m^2

2020-08-07 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Add binary prefixes zebi and yobi
	* Hide composite SI units for which a specific name/symbol exist
	* Do not use prefixes by default with most CGS units
	* New composite units: cP, cStoke, mTorr, dyn/cm²
	* Digit grouping after decimal separator (in groups of three, with standard digit grouping)
	* Use middle dot for multiplication and Unicode symbols for exponents 2 and 3 in composite units when Unicode is used

2020-08-05 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Add kph/kmph (km/h)

2020-08-03 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Fix BYN exchange rate (was inverted)
	* Fix BYR exchange rate
	* Fix updating of BYN and BTC exchange rates